# usd-convert-cad

./: .codex  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QA_TEST_PLAN.md  README.md  SECURITY.md  SKILL.md  THIRD_PARTY_NOTICES.md  _script_utils.py  convert.bat  convert.py  install.bat  install.py  pyproject.toml  requirements.txt  validate.bat  validate.py
.agents/: settings.local.json
.agents/skills/usd-convert-cad/: SKILL.md
.cursor/omniverse-cad-to-usd/: SKILL.md
app/: run_conversion.py
setup/: fetch_extensions.py  inspect_extension_docs.py  validate_env.py
skills/omniverse-cad-to-usd/: SKILL.md
skills/usd-convert-cad/: SKILL.md
src/usd_convert_cad/: __init__.py  cli.py  converter.py  formats.py  kit_runtime.py  report.py
tests/: test_metadata_option.py
